Tweaks to yaml frontmatter ordering in posts. Made content warning more configurable. (Also ID is now optional, as a "random" number is added to "ensure" uniqueness. It's still better to use different IDs on for multiples on the same page though). Modified fuzzy logic 1D example to fit table on iPhone screen better.

--- a/docs/assets/style/custom/main.scss
+++ b/docs/assets/style/custom/main.scss
@@ -721,6 +721,7 @@ button.hidden-content-warning {
   background-color: #ffdddd !important;
   border: 1px solid #ff5c5c !important;
   color: #a70000 !important;
+  fill: #a70000 !important;
   font-weight: bold !important;
   font-size: 18px !important;
   text-align: center !important;
